# tick_archive

./: .gitignore  .travis.yml  Doxyfile  mkn.yaml  plot_benchmark_results.py  run_benchmarks.py  setup.py  svrg_lazy_updates.py
benchmarks/: test.txt  (+7 more)
lib/src/cpp/array/: CMakeLists.txt
lib/src/cpp/array_test/: CMakeLists.txt
lib/src/cpp/base/: CMakeLists.txt
lib/src/cpp/base_model/: CMakeLists.txt
lib/src/cpp/inference/: CMakeLists.txt  hawkes_adm4.cpp
lib/src/cpp/linear_model/: CMakeLists.txt
lib/src/cpp/preprocessing/: CMakeLists.txt  longitudinal_features_lagger.cpp
lib/src/cpp/simulation/: CMakeLists.txt
tick/: CMakeLists.txt
tick/base/: __init__.py
tick/base/learner/: __init__.py  learner_glm.py  learner_hawkes_param.py  learner_robust_glm.py
tick/base/model/: __init__.py  model_first_order.py  model_generalized_linear.py  model_generalized_linear_with_intercepts.py  model_hawkes.py  model_labels_features.py  model_lipschitz.py  model_second_order.py  model_self_concordant.py
tick/base/simulation/: __init__.py  simu_point_process.py  simu_with_features.py
tick/base/src/: CMakeLists.txt  debug.h  defs.h  time_func.h
tick/base/tests/: __init__.py
tick/benchmark/: CMakeLists.txt  benchmark_hawkes_fixed_sum.cpp  benchmark_plot.py  benchmark_run.py  benchmark_util.py  build_benchmark_builds.sh  linreg_perf.cpp  setup_benchmark_builds.sh
tick/dataset/: download_helper.py  fetch_hawkes_data.py  fetch_url_dataset.py
tick/hawkes/: hawkes.py  hawkes_fixed_expkern_leastsq.py  hawkes_fixed_expkern_loglik.py  hawkes_fixed_sumexpkern_leastsq.py  hawkes_fixed_sumexpkern_loglik.py  simu_hawkes.py  simu_hawkes_exp_kernels.py  simu_hawkes_sumexp_kernels.py  simu_inhomogeneous_poisson.py  simu_poisson_process.py
tick/hawkes/base/: model_hawkes.py
tick/hawkes/hawkes_kernels/: hawkes_kernel.py  hawkes_kernel_0.py  hawkes_kernel_exp.py  hawkes_kernel_power_law.py  hawkes_kernel_sum_exp.py  hawkes_kernel_time_func.py
tick/hawkes/inference/: hawkes_expkern_fixeddecay.py
tick/hawkes/tests/: hawkes_fixed_expkern_leastsq_test.py  hawkes_fixed_expkern_loglik_test.py  hawkes_fixed_sumexpkern_leastsq_test.py  hawkes_fixed_sumexpkern_loglik_test.py  hawkes_kernel_0_test.py  hawkes_kernel_exp_test.py  hawkes_kernel_pickle_test.py  hawkes_kernel_power_law_test.py  hawkes_kernel_sum_exp_test.py  hawkes_kernel_test.py  hawkes_kernel_time_func_test.py  hawkes_multi_test.py
tick/inference/: __init__.py  convolutional_self_control_case_series.py  hawkes_adm4.py  hawkes_basis_kernels.py  hawkes_conditional_law.py  hawkes_em.py  hawkes_expkern_fixeddecay.py  hawkes_sumexpkern_fixeddecay.py  hawkes_sumgaussians.py  self_control_case_series.py
tick/inference/base/: __init__.py  learner_glm.py  learner_hawkes_noparam.py  learner_hawkes_param.py
tick/inference/src/: hawkes_adm4.cpp  hawkes_em.cpp  hawkes_sumgaussians.cpp
tick/inference/tests/: convolutional_self_control_case_series_test.py  hawkes_adm4_test.py  hawkes_basis_kernels_test.py  hawkes_em_test.py  hawkes_expkern_test.py  hawkes_sumgaussians_test.py  self_control_case_series_test.py
tick/linear_model/: __init__.py  hinge.py  linear_regression.py  linreg.py  logistic_regression.py  logreg.py  model_hinge.py  model_linreg.py  model_logreg.py  model_poisreg.py  model_quadratic_hinge.py  model_smoothed_hinge.py  poisreg.py  poisson_regression.py  quadratic_hinge.py  simu_linreg.py  simu_logreg.py  simu_poisreg.py  smoothed_hinge.py
tick/linear_model/tests/: hinge_test.py  linear_regression_test.py  linreg_test.py  logreg_test.py  model_hinge_test.py  model_linreg_test.py  model_logreg_test.py  model_poisreg_test.py  model_quadratic_hinge_test.py  model_smoothed_hinge_test.py  poisreg_test.py  poisson_regression_test.py  quadratic_hinge_test.py  simu_linreg_test.py  simu_logreg_test.py  simu_poisreg_test.py  smoothed_hinge_test.py
tick/optim/model/: __init__.py  absolute_regression.py  binom.py  coxreg_full_lik.py  coxreg_partial_lik.py  epsilon_insensitive.py  hawkes.py  hawkes_fixed_expkern_leastsq.py  hawkes_fixed_expkern_loglik.py  hawkes_fixed_sumexpkern_leastsq.py  hawkes_fixed_sumexpkern_loglik.py  hinge.py  huber.py  linreg.py  linreg_with_intercepts.py  logreg.py  modified_huber.py  poisreg.py  quadratic_hinge.py  sccs.py  smoothed_hinge.py
tick/optim/solver/: __init__.py  agd.py  sdca.py  sgd_minibatch.py  svrg.py
tick/plot/: plot_hawkes.py  plot_history.py  plot_point_process.py
tick/preprocessing/: longitudinal_features_lagger.py  longitudinal_features_product.py  longitudinal_samples_filter.py  utils.py
tick/preprocessing/base/: __init__.py
tick/preprocessing/src/: longitudinal_features_lagger.cpp
tick/preprocessing/tests/: longitudinal_features_lagger_test.py  longitudinal_features_product_test.py
tick/profiling/src/: CMakeLists.txt  poisson_sdca.cpp
tick/random/src/: CMakeLists.txt  rand.cpp  rand.h  test_rand.cpp
tick/robust/: __init__.py  absolute_regression.py  epsilon_insensitive.py  huber.py  linreg_with_intercepts.py  model_absolute_regression.py  model_epsilon_insensitive.py  model_huber.py  model_linreg_with_intercepts.py  model_modified_huber.py  modified_huber.py  robust_linear_regression.py
tick/robust/tests/: epsilon_insensitive_test.py  huber_test.py  linreg_with_intercepts_test.py  model_absolute_regression_test.py  modified_huber_test.py
tick/simulation/: __init__.py  hawkes.py  sccs.py
tick/simulation/src/: hawkes.h
tick/simulation/tests/: hawkes_multi_test.py  hawkes_test.py  sccs_test.py  test_6_special_debug.py
tick/solver/: saga.py  scpg.py  svrg.py
tick/solver/base/: first_order.py  first_order_sto.py  sto.py
tick/survival/: __init__.py  cox_regression.py  coxreg_partial_lik.py  model_sccs.py  sccs.py  simu_coxreg.py  simu_sccs.py
tick/survival/tests/: model_coxreg_partial_lik_test.py  model_sccs_test.py  sccs_test.py  simu_coxreg_test.py  simu_sccs_test.py
tools/benchmark/saga/: CMakeLists.txt  asaga_random_order_gtest_sparse.cpp  half_asaga_random_order_gtest_sparse.cpp  saga_random_order_gtest_sparse.cpp  shared_saga.cpp  shared_saga.h
(+174 files in other folders)
