add_library(tick_model EXCLUDE_FROM_ALL
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/model.h
        model_labels_features.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/model_labels_features.h
        model_generalized_linear.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/model_generalized_linear.h
        model_generalized_linear_with_intercepts.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/model_generalized_linear_with_intercepts.h
        linreg.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/linreg.h
        linreg_with_intercepts.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/linreg_with_intercepts.h
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/logreg.h 
        logreg.cpp
        poisreg.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/poisreg.h
		model_absolute_regression.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/model_absolute_regression.h
		model_epsilon_insensitive.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/model_epsilon_insensitive.h
		model_hinge.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/model_hinge.h
		model_quadratic_hinge.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/model_quadratic_hinge.h
		model_smoothed_hinge.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/model_smoothed_hinge.h
		model_huber.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/model_huber.h
		model_modified_huber.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/model_modified_huber.h
		base/hawkes_model.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/base/hawkes_model.h
		base/hawkes_fixed_kern_loglik.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/base/hawkes_fixed_kern_loglik.h
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/hawkes_fixed_expkern_loglik.h 
        hawkes_fixed_expkern_loglik.cpp
		${PROJECT_SOURCE_DIR}/include/tick/optim/model/hawkes_fixed_sumexpkern_loglik.h 
        hawkes_fixed_sumexpkern_loglik.cpp
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/hawkes_fixed_expkern_leastsq.h 
        hawkes_fixed_expkern_leastsq.cpp
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/hawkes_fixed_sumexpkern_leastsq.h 
        hawkes_fixed_sumexpkern_leastsq.cpp
        coxreg_partial_lik.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/coxreg_partial_lik.h
        model_lipschitz.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/model_lipschitz.h
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/hawkes_utils.h 
        hawkes_utils.cpp
		${PROJECT_SOURCE_DIR}/include/tick/optim/model/base/hawkes_list.h 
        base/hawkes_list.cpp
		${PROJECT_SOURCE_DIR}/include/tick/optim/model/variants/hawkes_leastsq_list.h 
        variants/hawkes_leastsq_list.cpp
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/variants/hawkes_fixed_expkern_leastsq_list.h 
        variants/hawkes_fixed_expkern_leastsq_list.cpp
		${PROJECT_SOURCE_DIR}/include/tick/optim/model/variants/hawkes_fixed_expkern_loglik_list.h 
        variants/hawkes_fixed_expkern_loglik_list.cpp
		${PROJECT_SOURCE_DIR}/include/tick/optim/model/variants/hawkes_fixed_kern_loglik_list.h 
        variants/hawkes_fixed_kern_loglik_list.cpp
		base/hawkes_single.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/base/hawkes_single.h
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/variants/hawkes_fixed_sumexpkern_leastsq_list.h 
        variants/hawkes_fixed_sumexpkern_leastsq_list.cpp
		${PROJECT_SOURCE_DIR}/include/tick/optim/model/variants/hawkes_fixed_sumexpkern_loglik_list.h 
        variants/hawkes_fixed_sumexpkern_loglik_list.cpp
        sccs.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/model/sccs.h)

target_link_libraries(tick_model
		${TICK_LIB_BASE}
		${TICK_LIB_ARRAY})
