add_library(tick_prox EXCLUDE_FROM_ALL
        prox.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/prox/prox.h
        prox_separable.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/prox/prox_separable.h
        prox_l2sq.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/prox/prox_l2sq.h
        prox_l2.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/prox/prox_l2.h
        prox_l1.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/prox/prox_l1.h
        prox_l1w.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/prox/prox_l1w.h
        prox_positive.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/prox/prox_positive.h
        prox_zero.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/prox/prox_zero.h
        prox_sorted_l1.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/prox/prox_sorted_l1.h
        prox_slope.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/prox/prox_slope.h
        prox_tv.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/prox/prox_tv.h
        prox_l1w.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/prox/prox_l1w.h
        prox_elasticnet.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/prox/prox_elasticnet.h
        prox_multi.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/prox/prox_multi.h
        prox_equality.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/prox/prox_equality.h
        prox_with_groups.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/prox/prox_with_groups.h
        prox_binarsity.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/prox/prox_binarsity.h
        prox_group_l1.cpp 
        ${PROJECT_SOURCE_DIR}/include/tick/optim/prox/prox_group_l1.h)
